--- a/css/main.css
+++ b/css/main.css
@@ -229,9 +229,38 @@ body {
 
 .cartona  {
   width:320px;
-  background-color: #9e1c23;
+  background-color: white;
   height: min-content;
   align-self: center;
   padding: 0.5rem;
   box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
 }
+
+table {
+  border-collapse: collapse;
+  width: 60%;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+}
+
+table td {
+  border: 2px solid #000;
+  padding: 10px;
+  text-align: center;
+}
+
+
+/* Estilos para el encabezado de la tabla */
+table th {
+  background-color: #000;
+  color: #fff;
+  padding: 10px;
+}
+
+/* Estilos para los números tachados */
+table td.tachado {
+  text-decoration: line-through;
+  background-color: #ccc; /* Puedes ajustar el color de fondo según tus preferencias */
+}
+
